# LCD_MENU

./: .gitignore  ReadMe.md  index.html
.github/workflows/: CI_Pipeline.yml  mkdocs-deploy.yml
assets/: index-Br_8CCpJ.js
docs/: reports.md
docs/doxygen/: Doxyfile
hw/STM32F030R8/: CMakeLists.txt
hw/STM32F091RB/: CMakeLists.txt
hw/STM32G070RB/: CMakeLists.txt
lcd-menu-generator/src/: App.jsx  MenuGeneratorApp.jsx
lib/MENU_LIB/: CMakeLists.txt  menu_lib.c  menu_lib.h  menu_lib_type.h  menu_screen_driver_interface.h
reports/: Info.txt
reports/CCM/: info.txt
reports/CCR/: Info.txt
reports/CCR/template/: DeleteMe.txt
src/: menu_lib.c  menu_lib.h  menu_lib_type.h
test/: update_all_reports.py
test/MENU_LIB/: CMakeLists.txt  custom_targets.cmake  menu.h  menu_lib_init_test.c  menu_lib_test.c  menu_lib_test_main.c  menu_lib_test_runner.c  mock_menu_implementation.c  mock_menu_implementation.h  mock_menu_screen_driver_interface.c  mock_menu_screen_driver_interface.h
test/template/: CMakeLists.txt  custom_targets.cmake  template_test.c  template_test_main.c  template_test_runner.c
tools/lcd-menu-generator/: README.md  package-lock.json  package.json
tools/lcd-menu-generator/src/: MenuGeneratorApp.jsx  codeGenerator.js  displayCodeWindow.jsx  menuItem.jsx
